--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "three-async-gltf-loader",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "author": "juunini",
   "license": "MIT",
   "repository": "https://github.com/juunini/three-async-gltf-loader",
@@ -17,12 +17,15 @@
     "async",
     "promise"
   ],
+  "scripts": {
+    "build": "tsc"
+  },
   "devDependencies": {
     "@types/three": "^0.146.0",
     "bun-types": "^0.2.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "three": "^0.147.0"
+    "three": "^0.148.0"
   }
 }
